# FanboxDLArchive

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: config.rs  creator.rs  main.rs
src/post/: file.rs  mod.rs
