[package]
name = "fanbox-dl-archive"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "A FanboxDL Transformer"
authors = ["xiao-e-yun <a0970323059@gmail.com>"]
repository = "https://github.com/xiao-e-yun/FanboxDLArchive"


[dependencies]
post-archiver = { version = "0.3.3", features = ["importer"] }
# other dependencies
chrono = { version = "0.4.38", features = ["serde"] }
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
clap = { version = "4.5.4", features = ["derive", "env"] }
log = "0.4.21"
dotenv = "0.15.0"
env_logger = "0.11.3"
clap-verbosity-flag = "2.2.0"
tokio = { version = "1.38.0", features = ["full"] }
mime_guess = "2.0.5"
imagesize = "0.14.0"
async-recursion = "1.1.1"
indicatif = "0.17.11"
indicatif-log-bridge = "0.2.3"
console = "0.15.11"
